# aster-kill

./: CMakeLists.txt  README.md  config.json
src/: CMakeLists.txt  main.cpp
src/Ecs/: CMakeLists.txt
src/Ecs/Components/: BaseComponentStorage.h  ComponentStorage.cpp  ComponentStorage.hpp
src/Ecs/Entity/: EntityId.cpp  EntityId.h
src/Ecs/Filter/: Filter.cpp  Filter.h  FilterBuilder.cpp  FilterBuilder.h  OptimisedFilter.cpp  OptimisedFilter.h  SparseFilter.cpp  SparseFilter.h
src/Ecs/Systems/: SystemsManager.cpp  SystemsManager.h
src/Ecs/World/: World.cpp  World.h
src/Objects/: Config.cpp  Config.h  Drawer.cpp  Drawer.h  Randomiser.cpp  Randomiser.h  Timer.cpp  Timer.h
src/Sample/Components/: ShootEventComponent.h  SpriteComponent.h
src/Sample/Systems/: InitSystem.cpp  InputSystem.cpp  InputSystem.h  MoveEventSystem.cpp  MoveEventSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  SpawnSystem.cpp  SpawnSystem.h
